# agentproxy-UI

./: .env.example  .gitignore  README.md  __init__.py  ccp.py  ccp_memory.py  cli.py  display.py  function_executor.py  models.py  pa.py  pa_memory.py  process_manager.py  pyproject.toml  requirements.txt  server.py  test_state_detection.py
agentproxy/: __init__.py  __main__.py  __main__.py.old  cli.py  display.py  file_tracker.py  function_executor.py  gemini_client.py  models.py  pa.py  pa_agent.py  pa_memory.py  process_manager.py  server.py  telemetry.py
agentproxy/coordinator/: __init__.py  celery_app.py  coordinator.py  models.py  tasks.py  worker_cli.py
agentproxy/prompts/: coding_standards.md  pa_agent_loop.md  pa_done_classifier.md  pa_done_detection.md  pa_stall_prevention.md  pa_system_prompt.md  review_checklist.md  security_rules.md
context/sys/: session_70d4cdf9.txt
examples/otel-stack/: README.md  docker-compose.yml  otel-collector-config.yaml  prometheus.yml
examples/otel-stack/grafana/dashboards/: agentproxy.json
examples/otel-stack/grafana/provisioning/dashboards/: dashboards.yaml
examples/otel-stack/grafana/provisioning/datasources/: datasources.yaml
project_memory/: project.txt
prompts/: ccp_system_prompt.md  coding_standards.md  python_best_practices.md  qa_patterns.md  review_checklist.md  security_rules.md
sessions/: 1b88a6c0.json  3227436f.json  3f551df0.json  506bac44.json  7564d33e.json  766900e7.json  7e9201af.json  8700b8dd.json  9546bd8a.json  bb100a4d.json  c48bf603.json  c536921d.json  c9e9b835.json  ca8b26f2.json  d7c36b6c.json  dacb7ecb.json  dee57efa.json  e349816a.json  f45e9e72.json  f905427e.json  ff86901c.json
tests/: __init__.py  test_baseline_compatibility.py  test_coordinator.py  test_done_detection.py
tests/integration/: __init__.py  test_classifier_gate_e2e.py  test_integration_error_handling.py  test_multi_worker.py
tests/unit/: __init__.py  test_done_classifier.py  test_gemini_error_handling.py
